--- a/style.css
+++ b/style.css
@@ -1,87 +1,73 @@
 *{
     background-color: rgb(199, 188, 174);
+    overflow: hidden;
 }
 #timer{
+    background-color: rgb(34, 107, 107);
     font-size: 30px;
     text-align: center;
-    background-color: rgb(34, 107, 107);
 }
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+#buttons {
+    align-items: center;
     background-color: #bdb2b2;
     border-radius: 0.5%;
-
-}
-li {
-    float: left;
-}
-li button {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 16px;
-    text-decoration: rgb(143, 28, 28);
-    border-radius: 0.5%;
-
-}
-li a:hover {
-    background-color: #111111;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 #plansza{
     background-color: #979797;
-    border-radius: 2.5%;
-    padding: 3px;
+    border-radius: 1.5%;
+    display: flex;
+    flex-wrap: wrap;
     margin: 0 auto;
+    padding: 3px;
     text-align: center;
-
+}
+#div-flagi{
+    align-items: center;
+    background-color: rgb(199, 188, 174);
+    display: none;
+    justify-content: center;
+    margin-top: 15px;
 }
 .easy{
-    width: 200px;
+    width: 240px;
 }
 .normal{
-    width: 350px;
+    width: 420px;
 }
 .hard{
-    width: 500px;
+    width: 600px;
 }
 button{
     background-color: #a59c99;
-    min-height: 25px;
-    min-width: 25px;
+    min-height: 30px;
+    min-width: 30px;
 }
 
 button:hover{
-    /* color: white; */
     cursor: pointer;
     background-color: #c7b5aa;
     transition-duration: 0.3s;
 }
-
 .btn123 {
-    background-color: #bdb2b2; 
-    color: black; 
-    border: 2px solid #692c19;
-    display: inline-block;
+    background-color: #bdb2b2;
     border: none;
+    color: black; 
     padding: 16px 32px;
-    text-align: center;
     text-decoration: none;
-
-
 }
 .btn123:hover {
-background-color: rgb(86, 138, 88);
-color: white;
-cursor: pointer;
-transition-duration: 0.4s;
+    background-color: rgb(86, 138, 88);
+    color: white;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+.sprawdzone{
+    background-color: #e9d7cc;
 }
 .bomba {
     background-color: orange;
-}
-.sprawdzone {
-    background-color: red;
 }
